# Copyright 2018-2024 the Deno authors. All rights reserved. MIT license.

[package]
name = "deno_error_macro"
version = "0.2.0"
description = "Macro for writing Deno errors"
homepage = "https://deno.land/"
repository = "https://github.com/denoland/deno_error"
documentation = "https://docs.rs/deno_error"
authors = ["the Deno authors"]
edition = "2021"
license = "MIT"

[lib]
path = "./lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
